# storage/api-docs/api-docs.json
@@ -49,7 +49,7 @@
                         }
                     },
                     {
-                        "name": "answer",
+                        "name": "answers",
                         "in": "query",
                         "required": true,
                         "schema": {
@@ -165,6 +165,143 @@
                         "bearer_token": []
                     }
                 ]
+            }
+        },
+        "/api/v1/certificate/generate": {
+            "post": {
+                "tags": [
+                    "Certificate"
+                ],
+                "summary": "Generar certificado",
+                "operationId": "25d2cdc545b3142b7c5327816043b021",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "course_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "code": "UuuId",
+                                        "path": "path/code"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Mensaje de error"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/certificate/download/{code}": {
+            "get": {
+                "tags": [
+                    "Certificate"
+                ],
+                "summary": "Descargar certificado",
+                "operationId": "d1f0720bfaa69fa1d1ffa38b73875cce",
+                "parameters": [
+                    {
+                        "name": "code",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success.",
+                        "content": {
+                            "application/pdf": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Failed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Mensaje de error"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/certificate/show/{code}": {
+            "get": {
+                "tags": [
+                    "Certificate"
+                ],
+                "summary": "Visualizar certificado",
+                "operationId": "40c81275f46bd98371fc65b984ea8c0b",
+                "parameters": [
+                    {
+                        "name": "code",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success.",
+                        "content": {
+                            "application/pdf": {}
+                        }
+                    },
+                    "500": {
+                        "description": "Failed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Mensaje de error"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/v1/content/list": {
